# skyhook

./: .gitignore  Cargo.toml  README.md  com.rutins.Skyhook.json  default.nix  flake.nix  meson.build
data/: com.rutins.Skyhook.appdata.xml.in  com.rutins.Skyhook.desktop.in  com.rutins.Skyhook.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.rs  application.vala  auth.rs  config.rs  main.rs  main.vala  meson.build  project-window.ui  skyhook.gresource.xml  window.rs  window.ui  window.vala
src/lib/: gql-types.vala  gql.vala  meson.build  util.vala
src/widgets/: login.vala  meson.build  project-window.vala  projects.vala  welcome.vala
