[package]
name = "skyhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.8.0"
railwayapp = { git = "https://github.com/aleksrutins/cliv3", branch = "lib" }
open = "3"
rand = "0.8.5"
base64 = "0.21.0"
hostname = "0.3.1"
anyhow = "1.0.69"
tokio = { version = "1.25.0", features = ["full"] }
hyper = { version = "1.0.0-rc.2", features = ["server", "http1"] }
serde_json = "1.0.93"
serde = "1.0.152"
http-body-util = "0.1.0-rc.2"
